# AVI-MetaEdit

./: AVI_MetaEdit_CLI_1.0.0_Mac_Universal.tar.bz2  History_CLI.txt  License.html  README  README.md  avimetaedit_1.0.0.tar.bz2  codeinventory.json  conformance_point_document.xsd
Project/GNU/: avimetaedit.dsc  avimetaedit.spec
Project/GNU/CLI/: AddThisToRoot_CLI_compile.sh  Makefile.am  configure.ac
Project/GNU/GUI/: AddThisToRoot_GUI_compile.sh  Makefile.am  avimetaedit-gui.desktop  avimetaedit-gui.kde3.desktop  avimetaedit-gui.kde4.desktop  configure.ac
Project/MSVC2010/: AVI_MetaEdit.sln
Project/MSVC2010/CLI/: AVI_MetaEdit_CLI.rc  AVI_MetaEdit_CLI.vcxproj
Project/MSVC2010/GUI/: AVI_MetaEdit_GUI.rc  AVI_MetaEdit_GUI.vcxproj
Release/: ReadMe_CLI_Linux.txt  ReadMe_CLI_Mac.txt  ReadMe_CLI_Windows.txt  ReadMe_GUI_Linux.txt  ReadMe_GUI_Mac.txt  ReadMe_GUI_Windows.txt  Release_All_GNU_FromSource.sh  Release_CLI_GNU.sub  Release_CLI_Windows_i386.bat  Release_CLI_Windows_x64.bat  Release_GUI_GNU.sub  Release_GUI_Windows_i386.bat  Release_GUI_Windows_x64.bat  Release_Source.bat
Source/CLI/: CLI_Help.cpp  CLI_Help.h  CLI_Main.cpp  CommandLine_Parser.cpp  CommandLine_Parser.h
Source/Common/: Common_About.cpp  Common_About.h  Core.cpp  Core.h
Source/FromMediaInfo/: FromMediaInfo.cpp  FromMediaInfo.h
Source/GUI/Qt/: App.cpp  GUI_About.cpp  GUI_About.h  GUI_Help - Copie.cpp  GUI_Help.cpp  GUI_Help.h  GUI_Main.cpp  GUI_Main.h  GUI_Main.rc  GUI_Main_Core_Table.cpp  GUI_Main_Core_Table.h  GUI_Main_Core_Text.cpp  GUI_Main_Core_Text.h  GUI_Main_Menu.cpp  GUI_Main_Output_Log.cpp  GUI_Main_Output_Log.h  GUI_Main_Output_Trace.cpp  GUI_Main_Output_Trace.h  GUI_Main_Output_stderr.cpp  GUI_Main_Output_stderr.h  GUI_Main_Technical_Table.cpp  GUI_Main_Technical_Table.h  GUI_Main_Technical_Text.cpp  GUI_Main_Technical_Text.h  GUI_Main_UndoDialog.cpp  GUI_Main_UndoDialog.h  (+16 more)
Source/Install/: AVI_MetaEdit_GUI_Windows_i386.nsi  AVI_MetaEdit_GUI_Windows_x64.nsi
Source/MediaInfoDLL/: CodecIDs.h
Source/Resource/: GUI_Main.qrc
Source/Riff/: Riff_Base.cpp  Riff_Base.h  Riff_Base_Streams.cpp  Riff_Chunks.h  Riff_Chunks_.cpp  Riff_Chunks_AVIX.cpp  Riff_Chunks_AVI_.cpp  Riff_Chunks_AVI__INFO.cpp  Riff_Chunks_AVI__INFO_xxxx.cpp  Riff_Chunks_AVI__JUNK.cpp  Riff_Chunks_AVI__MD5_.cpp  Riff_Chunks_AVI__Tdat.cpp  Riff_Chunks_AVI__Tdat_rn_A.cpp  Riff_Chunks_AVI__Tdat_rn_O.cpp  Riff_Chunks_AVI__Tdat_tc_A.cpp  Riff_Chunks_AVI__Tdat_tc_O.cpp  Riff_Chunks_AVI___PMX.cpp  Riff_Chunks_AVI__aXML.cpp  Riff_Chunks_AVI__hdrl.cpp  Riff_Chunks_AVI__hdrl_avih.cpp  Riff_Chunks_AVI__hdrl_odml.cpp  Riff_Chunks_AVI__hdrl_odml_dmlh.cpp  Riff_Chunks_AVI__hdrl_strl.cpp  Riff_Chunks_AVI__hdrl_strl_indx.cpp  Riff_Chunks_AVI__hdrl_strl_strf.cpp  Riff_Chunks_AVI__hdrl_strl_strh.cpp  Riff_Chunks_AVI__iXML.cpp  Riff_Chunks_AVI__idx1.cpp  Riff_Chunks_AVI__movi.cpp  Riff_Chunks_AVI__movi___ix.cpp  Riff_Chunks_AVI__movi_xxxx.cpp  Riff_Handler.cpp  Riff_Handler.h
Source/ZenLib/: File.cpp
debian/: avimetaedit-gui.dirs  avimetaedit-gui.install  avimetaedit.dirs  avimetaedit.install  changelog  control  copyright  rules
(+31 files in other folders)
