AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = avimetaedit
avimetaedit_SOURCES = \
    ../../../Source/CLI/CLI_Help.cpp \
    ../../../Source/CLI/CLI_Main.cpp \
    ../../../Source/CLI/CommandLine_Parser.cpp \
    ../../../Source/Common/Common_About.cpp \
    ../../../Source/Common/Core.cpp \
    ../../../Source/FromMediaInfo/FromMediaInfo.cpp \
    ../../../Source/MD5/md5.c \
    ../../../Source/Riff/Riff_Base.cpp \
    ../../../Source/Riff/Riff_Base_Streams.cpp \
    ../../../Source/Riff/Riff_Chunks_.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI_.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI___PMX.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__aXML.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_avih.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_odml.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_odml_dmlh.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_strl.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_strl_indx.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_strl_strf.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__hdrl_strl_strh.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__idx1.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__INFO.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__INFO_xxxx.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__iXML.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__JUNK.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__MD5_.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__movi.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__movi___ix.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__movi_xxxx.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__Tdat.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__Tdat_rn_A.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__Tdat_rn_O.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__Tdat_tc_A.cpp \
    ../../../Source/Riff/Riff_Chunks_AVI__Tdat_tc_O.cpp \
    ../../../Source/Riff/Riff_Chunks_AVIX.cpp \
    ../../../Source/Riff/Riff_Handler.cpp \
    ../../../Source/TinyXml/tinystr.cpp \
    ../../../Source/TinyXml/tinyxml.cpp \
    ../../../Source/TinyXml/tinyxmlerror.cpp \
    ../../../Source/TinyXml/tinyxmlparser.cpp \
    ../../../Source/ZenLib/Conf.cpp \
    ../../../Source/ZenLib/CriticalSection.cpp \
    ../../../Source/ZenLib/Dir.cpp \
    ../../../Source/ZenLib/File.cpp \
    ../../../Source/ZenLib/FileName.cpp \
    ../../../Source/ZenLib/InfoMap.cpp \
    ../../../Source/ZenLib/int128s.cpp \
    ../../../Source/ZenLib/int128u.cpp \
    ../../../Source/ZenLib/MemoryDebug.cpp \
    ../../../Source/ZenLib/OS_Utils.cpp \
    ../../../Source/ZenLib/Translation.cpp \
    ../../../Source/ZenLib/Thread.cpp \
    ../../../Source/ZenLib/Utils.cpp \
    ../../../Source/ZenLib/Ztring.cpp \
    ../../../Source/ZenLib/ZtringList.cpp \
    ../../../Source/ZenLib/ZtringListList.cpp \
    ../../../Source/ZenLib/ZtringListListF.cpp

#avimetaedit_LDFLAGS     = -no-undefined -version-info 0:0:0

INCLUDES = -I../../../Source